# super-duper-memory

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  run.sh
account_monitor/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
account_monitor/include/: binance_user_stream.hpp  kucoin_user_stream.hpp  okex_user_stream.hpp  stream_results.hpp  userstream_keyalive.hpp
account_monitor/src/: binance_user_stream.cpp  kucoin_user_stream.cpp  okex_user_stream.cpp  userstream_keyalive.cpp  watches_launcher.cpp
account_process_delegator/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
account_process_delegator/include/: cli.hpp  database_connector.hpp  db_config.hpp  price_tasks.hpp  scheduled_price_tasks.hpp  server.hpp  session.hpp  user_info.hpp
account_process_delegator/src/: accounts_watcher.cpp  database_connector.cpp  latest_prices_watcher.cpp  price_tasks.cpp  price_watcher.cpp  scheduled_account_tasks.cpp  scheduled_price_tasks.cpp  server.cpp  session.cpp
account_process_monitor/: main.cpp
account_tasks/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt
common-lib/include/: container.hpp  crypto_utils.hpp  https_rest_api.hpp  json_utils.hpp
common-lib/src/: string_utils.cpp  uri.cpp
common/dbus/include/: progress_proxy_client_impl.hpp  time_proxy_client_impl.hpp
common/dbus/use/: progress_proxy_client_impl.hpp
common/dbus/use_cases/: price_task_result_client_impl.hpp  telegram_proxy_client_impl.hpp  time_proxy_client_impl.hpp
common/dbus/xml/: price_result_stream_interface.xml  progress_dbus_interfaces.xml  telegram_dbus_interface.xml  time_dbus_interfaces.xml
common/include/: container.hpp  crypto_utils.hpp  enumerations.hpp  fields_alloc.hpp  file_utils.hpp  http_client.hpp  http_rest_client.hpp  https_rest_api.hpp  https_rest_client.hpp  json_utils.hpp  macro_defines.hpp  random_utils.hpp  string_utils.hpp  uri.hpp
common/include/account_stream/: binance_order_info.hpp  okex_order_info.hpp  user_scheduled_task.hpp
common/include/price_stream/: commodity.hpp  tasks.hpp
common/include/price_stream/adaptor/: commodity_adaptor.hpp  scheduled_task_adaptor.hpp
common/src/: crypto_utils.cpp  file_utils.cpp  http_rest_client.cpp  https_rest_api.cpp  https_rest_client.cpp  json_utils.cpp  random_utils.cpp  string_utils.cpp  uri.cpp
common/src/price_stream/adaptor/: scheduled_task_adaptor.cpp
crypto-log/: main.cpp
crypto-log/include/: binance_price_stream.hpp  binance_user_stream.hpp  cli.hpp  config.hpp  database_connector.hpp  okex_price_stream.hpp  orders_info.hpp  request_handler.hpp  server.hpp  session.hpp  subscription_data.hpp  tasks.hpp  user_info.hpp  userstream_keyalive.hpp  websock_launcher.hpp
crypto-log/src/: binance_price_stream.cpp  binance_user_stream.cpp  database_connector.cpp  okex_price_stream.cpp  server.cpp  session.cpp  userstream_keyalive.cpp  websock_launcher.cpp
docker/: cmake-cpp-image.dockerfile
docker/files/: keep.my.journal.time.conf  start.sh  supervisord.conf
docker/files/conf/: keep.my.journal.messaging.tg.conf  keep.my.journal.price.result.conf  keep.my.journal.progress.conf  nginx.conf  supervisord.conf
http_stream/: CMakeLists.txt  main.cpp
http_stream/include/: endpoint.hpp  scheduled_price_tasks.hpp  session.hpp  user_info.hpp
http_stream/src/: endpoint.cpp  scheduled_price_tasks.cpp  session.cpp
message_delegator/: CMakeLists.txt  main.cpp
openssl_test/: openssl_test.cpp
price_message_delegator/: CMakeLists.txt  main.cpp
price_monitor/: CMakeLists.txt  Makefile  cmake_install.cmake  https_rest_api.cpp  main.cpp
price_monitor/include/: binance_price_stream.hpp  commodity.hpp  https_rest_api.hpp  kucoin_price_stream.hpp  okex_price_stream.hpp
price_monitor/src/: binance_price_stream.cpp  external_messaging_stream.cpp  https_rest_api.cpp  kucoin_price_stream.cpp  okex_price_stream.cpp
price_result_stream/: CMakeLists.txt  main.cpp
price_result_stream/include/dbus/: price_result_adaptor.hpp
price_result_stream/src/dbus/: price_result_adaptor.cpp
process_delegator/: CMakeLists.txt
process_delegator/include/: cli.hpp  scheduled_price_tasks.hpp  session.hpp
process_delegator/src/: scheduled_account_tasks.cpp  scheduled_price_tasks.cpp  server.cpp  session.cpp
progress_tasks/: CMakeLists.txt  main.cpp
progress_tasks/include/: progress_based_task.hpp
progress_tasks/include/dbus/: progress_task_adaptor.hpp
progress_tasks/src/: lastest_prices.cpp  progress_based_task.cpp
scripts/: database.json  format.py  run.py  sample.json  server.py  test_accounting.py  test_prices.py
scripts/config/: countries.json  database.ini  development.py  production.py
sinks/: sinks.cpp
telegram_client/: CMakeLists.txt  main.cpp
telegram_client/include/: telegram_adaptor_server_impl.hpp
time_tasks/: CMakeLists.txt  main.cpp
time_tasks/include/: time_based_watch.hpp
time_tasks/include/dbus/: time_task_adaptor.hpp
time_tasks/src/: lastest_prices.cpp  time_based_watch.cpp
